<resources>
    <string name="app_name">Hospital Vai Voltar</string>
    <string name="nome_do_paciente">Nome do paciente</string>
    <string name="numero_do_leito">Número do leito</string>
    <string name="pressao_arterial">Pressão arterial</string>
    <string name="batimentos_cardiacos">Batimentos cardíacos</string>
    <string name="temperatura">Temperatura</string>
    <string name="salvar">Salvar</string>
    <string name="adicionar_paciente">Adicionar paciente</string>
    <string name="pesquisar_paciente">Pesquisar paciente</string>
    <string name="buscar">Buscar</string>
    <string name="listar_pacientes">Listar Pacientes</string>
</resources>
