<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPacienteActivity">

    <EditText
        android:id="@+id/text_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_paciente"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/text_leito"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_do_leito"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/text_pressao_arterial"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pressao_arterial"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/text_batimento_cardiaco"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/batimentos_cardiacos"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/text_temperatura"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temperatura"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textAlignment="center"/>



    <Button
        android:id="@+id/button_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_margin="10dp"
        android:background="#C5E7FF"/>

</LinearLayout>